Fixed some width layout issues

--- a/src/ModalProvider/index.scss
+++ b/src/ModalProvider/index.scss
@@ -39,7 +39,6 @@
   width: auto;
   display: inline-block;
   vertical-align: middle;
-  box-sizing: border-box;
   max-width: auto;
   cursor: default;
   border-radius: 4px;
